--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023년 버킷리스트</title>
+    <title>혜린의 2023년 버킷리스트</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
         * {
@@ -13,7 +13,7 @@
         }
         .title {
             color: white;
-            background-color: cornflowerblue;
+            background-color: tomato;
             font-size: 24px;
             padding: 8px 16px;
             border-radius: 8px;
@@ -49,15 +49,15 @@
 </head>
 
 <body class="bg center">
-    <h1 class="title">2023 신년계획</h1>
+    <h1 class="title">혜린의 2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">매일 코딩 강의 듣기</div>
-        <div class="bucket img2-t2 center">운동하기</div>
-        <div class="bucket img2-t2 center">승제쌤 강의 완강하기</div>
-        <div class="bucket img1-t2 center">화학 강의 완강하기</div>
-        <div class="bucket img1-t2 center">나만의 게임 만들기</div>
-        <div class="bucket img2-t2 center">상반기 돈 600 모으기</div>
+        <div class="bucket img1 center">디자인 커리어 업그레이드</div>
+        <div class="bucket img2 center">개인 채널 운영(인스타, 유튜브)</div>
+        <div class="bucket img2 center">체지방 10kg 감량</div>
+        <div class="bucket img1 center">기획 공부하기</div>
+        <div class="bucket img1 center">3D 그래픽 툴 배우기</div>
+        <div class="bucket img2 center">굿노트 상품 2개 이상 발행</div>
     </div>
 
 </body>
